--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ allprojects{
     dependencyManagement {
         dependencies {
             dependency("com.google.guava:guava:${Versions.guava}")
+            dependency("org.junit.jupiter:junit-jupiter-api:${Versions.junitJupiter}")
         }
     }
 }
