--- a/hw01-gradle/build.gradle
+++ b/hw01-gradle/build.gradle
@@ -6,7 +6,7 @@ plugins {
 dependencies {
 
     // Use JUnit Jupiter API for testing.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
