--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ idea {
 }
 
 allprojects{
-    group "com.svitix"
+    group "com.svitix.hw2020"
 
     repositories {
         mavenCentral()
@@ -26,6 +26,7 @@ allprojects{
         dependencies {
             dependency("com.google.guava:guava:${Versions.guava}")
             dependency("org.junit.jupiter:junit-jupiter-api:${Versions.junitJupiter}")
+            dependency("org.junit.jupiter:junit-jupiter-engine:${Versions.junitJupiter}")
         }
     }
 }
