--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,19 @@ allprojects{
 
     apply plugin: "io.spring.dependency-management"
     dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:2.4.1")
+        }
         dependencies {
             dependency("com.google.guava:guava:${Versions.guava}")
             dependency("org.junit.jupiter:junit-jupiter-api:${Versions.junitJupiter}")
+            dependency("org.flywaydb:flyway-core:${Versions.flyway}")
+            dependency("org.postgresql:postgresql:${Versions.postgresql}")
         }
     }
+}
+
+//gradle -q welcome
+task welcome {
+    println 'Welcome!'
 }
