--- a/settings.gradle
+++ b/settings.gradle
@@ -8,7 +8,7 @@
  */
 
 rootProject.name = 'hw2020'
-include('hw01-gradle')
-include('hw02-arraylist')
+include 'hw01-gradle'
+include 'hw02-arraylist'
 include 'hw03-test'
-
+include 'hw09-orm'
